# pyth_price_monitor

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  USAGE.md  opencode.json
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  security-audit.yml
.opencode/: README.md
.opencode/rules/: 00-core.md  10-rust-standards.md  20-testing-and-quality.md  30-security-and-dependencies.md  40-docs-and-observability.md
docs/: ARCHITECTURE.md  CONTRIBUTING.md  README.md  USAGE.md
examples/: alloy_integration.rs  multi_feed_alerts.rs
src/: config.rs  hermes_client.rs  lib.rs  main.rs  price_monitor.rs  rpc_ws_client.rs  types.rs
